--- a/src/views/javafx/NewProductView.fxml
+++ b/src/views/javafx/NewProductView.fxml
@@ -24,6 +24,7 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label text="Nom : " GridPane.halignment="RIGHT">
@@ -62,6 +63,16 @@
                </children>
             </GridPane>
             <ChoiceBox fx:id="cbCategorie" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label text="Visuel :" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
+               <GridPane.margin>
+                  <Insets right="4.0" />
+               </GridPane.margin>
+            </Label>
+            <TextField fx:id="tfVisuel" maxHeight="-Infinity" prefHeight="25.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+               <GridPane.margin>
+                  <Insets bottom="4.0" right="4.0" top="4.0" />
+               </GridPane.margin>
+            </TextField>
          </children>
          <VBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
