--- a/src/views/javafx/NewCommandView.fxml
+++ b/src/views/javafx/NewCommandView.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -13,77 +14,81 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CommandController">
-   <children>
-      <GridPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-border-color: black; -fx-border-width: 2;">
-         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="340.0" />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints maxHeight="-Infinity" minHeight="100.0" prefHeight="100.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="120.0" prefHeight="150.0" vgrow="SOMETIMES" />
-         </rowConstraints>
+<ScrollPane fitToHeight="true" fitToWidth="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CommandController">
+   <content>
+      <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity">
          <children>
-            <GridPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="140.0" prefWidth="164.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="465.0" minWidth="10.0" prefWidth="432.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints vgrow="SOMETIMES" />
-                <RowConstraints vgrow="SOMETIMES" />
-              </rowConstraints>
+            <GridPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-border-color: black; -fx-border-width: 2;">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="340.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints maxHeight="-Infinity" minHeight="100.0" prefHeight="100.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="120.0" prefHeight="150.0" vgrow="SOMETIMES" />
+               </rowConstraints>
                <children>
-                  <Label text="Date de commande :" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+                  <GridPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="140.0" prefWidth="164.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="465.0" minWidth="10.0" prefWidth="432.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints vgrow="SOMETIMES" />
+                      <RowConstraints vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label text="Date de commande :" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets right="10.0" />
+                           </GridPane.margin>
+                        </Label>
+                        <Label text="Client : " GridPane.halignment="RIGHT">
+                           <GridPane.margin>
+                              <Insets right="10.0" />
+                           </GridPane.margin>
+                        </Label>
+                        <ChoiceBox fx:id="cbClient" prefWidth="220.0" GridPane.columnIndex="1">
+                           <GridPane.margin>
+                              <Insets left="4.0" />
+                           </GridPane.margin>
+                        </ChoiceBox>
+                        <DatePicker fx:id="dpDateCommand" promptText="jj/mm/aaaa" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets left="4.0" />
+                           </GridPane.margin>
+                        </DatePicker>
+                     </children>
+                  </GridPane>
+                  <TableView fx:id="tvProducts" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                    <columns>
+                      <TableColumn fx:id="colProdName" prefWidth="75.0" text="Produit" />
+                      <TableColumn fx:id="colProdQuant" prefWidth="75.0" text="Quantité" />
+                    </columns>
                      <GridPane.margin>
-                        <Insets right="10.0" />
+                        <Insets bottom="10.0" left="20.0" right="20.0" />
                      </GridPane.margin>
-                  </Label>
-                  <Label text="Client : " GridPane.halignment="RIGHT">
-                     <GridPane.margin>
-                        <Insets right="10.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <ChoiceBox fx:id="cbClient" prefWidth="150.0" GridPane.columnIndex="1">
-                     <GridPane.margin>
-                        <Insets left="4.0" />
-                     </GridPane.margin>
-                  </ChoiceBox>
-                  <DatePicker fx:id="dpDateCommand" promptText="jj/mm/aaaa" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                     <GridPane.margin>
-                        <Insets left="4.0" />
-                     </GridPane.margin>
-                  </DatePicker>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                  </TableView>
                </children>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
             </GridPane>
-            <TableView fx:id="tvProducts" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
-              <columns>
-                <TableColumn fx:id="colProdName" prefWidth="75.0" text="Produit" />
-                <TableColumn fx:id="colProdQuant" prefWidth="75.0" text="Quantité" />
-              </columns>
-               <GridPane.margin>
-                  <Insets bottom="10.0" left="20.0" right="20.0" />
-               </GridPane.margin>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-            </TableView>
+            <FlowPane alignment="CENTER" columnHalignment="CENTER" minHeight="50.0" orientation="VERTICAL" prefHeight="70.0" prefWidth="600.0">
+               <children>
+                  <Button fx:id="btnCreate" alignment="CENTER" mnemonicParsing="false" onAction="#createClick" text="Créer">
+                     <FlowPane.margin>
+                        <Insets bottom="5.0" />
+                     </FlowPane.margin>
+                  </Button>
+               </children>
+            </FlowPane>
          </children>
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-         <VBox.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </VBox.margin>
-      </GridPane>
-      <FlowPane alignment="CENTER" columnHalignment="CENTER" minHeight="50.0" orientation="VERTICAL" prefHeight="70.0" prefWidth="600.0">
-         <children>
-            <Button fx:id="btnCreate" alignment="CENTER" mnemonicParsing="false" text="Créer" onAction="#createClick" >
-               <FlowPane.margin>
-                  <Insets bottom="5.0" />
-               </FlowPane.margin>
-            </Button>
-         </children>
-      </FlowPane>
-   </children>
-</VBox>
+      </VBox>
+   </content>
+</ScrollPane>
