--- a/src/views/javafx/MainView.fxml
+++ b/src/views/javafx/MainView.fxml
@@ -529,7 +529,7 @@
                                     <TableView fx:id="tvCmdInfo" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
                                       <columns>
                                         <TableColumn fx:id="colCmdInfoProd" minWidth="50.0" prefWidth="75.0" text="Produit" />
-                                        <TableColumn fx:id="colCmdInfoQuantité" prefWidth="75.0" text="Quantité" />
+                                        <TableColumn fx:id="colCmdInfoQuantite" prefWidth="75.0" text="Quantité" />
                                       </columns>
                                        <columnResizePolicy>
                                           <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
