--- a/src/views/javafx/MainView.fxml
+++ b/src/views/javafx/MainView.fxml
@@ -495,6 +495,7 @@
                                       <rowConstraints>
                                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                       </rowConstraints>
                                        <children>
                                           <HBox prefHeight="100.0" prefWidth="200.0">
@@ -525,12 +526,27 @@
                                                 </Label>
                                              </children>
                                           </HBox>
+                                          <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="2">
+                                             <children>
+                                                <Label text="Prix total : ">
+                                                   <padding>
+                                                      <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
+                                                   </padding>
+                                                </Label>
+                                                <Label fx:id="lblCmdInfoTotalPrice" text="">
+                                                   <padding>
+                                                      <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
+                                                   </padding>
+                                                </Label>
+                                             </children>
+                                          </HBox>
                                        </children>
                                     </GridPane>
                                     <TableView fx:id="tvCmdInfo" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
                                       <columns>
                                         <TableColumn fx:id="colCmdInfoProd" minWidth="50.0" prefWidth="75.0" text="Produit" />
                                         <TableColumn fx:id="colCmdInfoQuantite" prefWidth="75.0" text="Quantité" />
+                                          <TableColumn fx:id="colCmdInfoPrice" prefWidth="75.0" text="Prix total" />
                                       </columns>
                                        <columnResizePolicy>
                                           <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
